service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app-svc
  labels:
    app: ecommerce-app
spec:
  type: ClusterIP
  selector:
    app: ecommerce-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
